fix: filters alignment

--- a/docs/public/style.css
+++ b/docs/public/style.css
@@ -95,7 +95,7 @@ h3 {
 }
 
 .tags {
-  max-width: 100%;
+  max-width: 400px;
   padding: 6px;
   margin: 20px auto;
 }
